; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_netif/extr_esp_netif_handlers.c_esp_netif_action_stop.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_netif/extr_esp_netif_handlers.c_esp_netif_action_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"esp_netif action stopped with netif%p from event_id=%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_netif_action_stop(i8* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* @TAG, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @ESP_LOGD(i32 %9, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i8* %10, i32 %11)
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @esp_netif_stop(i8* %13)
  ret void
}

declare dso_local i32 @ESP_LOGD(i32, i8*, i8*, i32) #1

declare dso_local i32 @esp_netif_stop(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
